@@ -12,3 +12,5 @@
 #               Added Qlogic HBA support
 #               0.0.7 Sun  7 Jul 2013 09:51:40 EST
 #               Added support to download Patches, README, and patchdiag.xref independently
+#               0.0.8 Sun  7 Jul 2013 11:53:09 ES
+#               Fixed Qlogic HBA firmware support
